Fixes some home page alt text fixes
* Removes aria-hidden from carousel chevrons
* Mised index.html.erb file originally

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,12 +34,12 @@
     </div>
     <div class="col-sm-2 text-center">
       <a href="https://www.facebook.com/wgbharchives" target="_blank" class="btn btn-lg">
-        <img src="/images/facebook_logo.png"/>
+        <img src="/images/facebook_logo.png" alt="Facebook Logo"/>
       </a>
     </div>
     <div class="col-sm-2 text-center">
       <a href="https://twitter.com/wgbharchives" target="_blank" class="btn btn-lg">
-        <img src="/images/twitter_logo.png"/>
+        <img src="/images/twitter_logo.png" alt="Twitter Logo"/>
       </a>
     </div>
     <div class="col-sm-2 text-center">
