Adds blank alt & aria-hidden to collection & exhibit show page

--- a/app/views/shared/_above_tabs.html.erb
+++ b/app/views/shared/_above_tabs.html.erb
@@ -8,7 +8,7 @@
   </div>
 <% end %>
 
-<img src="<%= item.img_src %>" class="signature"/>
+<img src="<%= item.img_src %>" class="signature" alt="" aria-hidden="true"/>
 
 <div>
   <%= item.tabs['intro'].content.html_safe %>
