--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -34,7 +34,7 @@
             margin: 0px; padding: 0px; height: 0px;
         }
     }
-    
+
     #sidebar {
         padding: 0px; // BL default extra space below
         margin: 0 grid-gutter-width / 2;
@@ -69,7 +69,7 @@
                             padding: 0px;
                             text-indent: 0px;
                             word-break: normal; // I have never liked BL's default.
-                            a { 
+                            a {
                                 color: #000;
                                 display: block;
                                 padding: $grid-gutter-width/8 $grid-gutter-width/2; // To match menu header
@@ -98,7 +98,7 @@
             }
         }
     }
-    
+
     #facet-year .panel-body {
         right: 0;
         .limit_content {
@@ -115,8 +115,8 @@
         }
     }
 
-          
-    
+
+
     #content {
         padding-top: $grid-gutter-width/2;
 
@@ -128,7 +128,7 @@
                 .arrow { display: inline; }
             }
         }
-        
+
         #sortAndPerPage {
             border: none; // Default has line at bottom.
             padding: 0px;
@@ -167,4 +167,12 @@
         }
     }
 
+}
+.panel-title {
+    font-weight: 500;
+    padding: 0;
+    line-height: 1.1;
+}
+.panel-title a {
+    color: #000;
 }
