--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -177,3 +177,14 @@
 .panel-title a {
     color: #000;
 }
+.panel-title:after {
+    font-family: 'Glyphicons Halflings';
+    content: "\e114";
+    float: right;
+    color: grey;
+    font-size: 0.8em;
+    line-height: normal;
+}
+.facet_limit {
+    margin-bottom: 0;
+}
