--- a/app/views/catalog/_facet_layout.html.erb
+++ b/app/views/catalog/_facet_layout.html.erb
@@ -1,15 +1,13 @@
 <%# Removed .panel.panel-default %>
-<div class="col-md-2 facet_limit blacklight-<%= facet_field.key.parameterize %> <%= 'facet_limit-active' if facet_field_in_params?(facet_field.key) %>">
+<ul class="col-md-2 facet_limit blacklight-<%= facet_field.key.parameterize %> <%= 'facet_limit-active' if facet_field_in_params?(facet_field.key) %>">
   <div class="<%= "collapsed" if should_collapse_facet?(facet_field) %> collapse-toggle panel-heading" data-toggle="collapse" data-target="#<%= facet_field_id(facet_field) %>">
-    <ul class="panel-title facet-field-heading">
-      <li>
-        <%= link_to facet_field_label(facet_field.key), "#", :"data-no-turbolink" => true %>
-      </li>
-    </ul>
+    <li class="panel-title facet-field-heading">
+      <%= link_to facet_field_label(facet_field.key), "#", :"data-no-turbolink" => true %>
+    </li>
   </div>
   <div id="<%= facet_field_id(facet_field) %>" class="panel-collapse facet-content <%= should_collapse_facet?(facet_field) ? 'collapse' : 'in' %>">
     <div class="panel-body">
       <%= yield %>
     </div>
   </div>
-</div>
+</ul>
