--- a/app/views/catalog/player/_player_modal.html.erb
+++ b/app/views/catalog/player/_player_modal.html.erb
@@ -19,8 +19,7 @@
         </p>
         <p>
           If you are interested in licensing stock footage please visit
-          <a href="http://wgbhstocksales.org">WGBH Stock Sales</a>, or contact us directly at 
-          <a href="mailto:stock_sales@wgbh.org">stock_sales@wgbh.org</a> or 617-300-3939.
+          <a href="http://wgbhstocksales.org">WGBH Stock Sales</a>.
         </p>
         <p>
           If you are a researcher you may schedule an appointment to visit 
