Revert "646 Search Results Hidden Aria Text"

--- a/app/views/shared/_document.html.erb
+++ b/app/views/shared/_document.html.erb
@@ -13,14 +13,7 @@
       <% end %>
     </div>
   </div>
-  <div class="info" aria-labeledby="title" aria-describedby="description">
-    <div id="title">
-      <%= document[:title] %><br/>
-    </div>
-    <% if document[:asset_description].present? %>
-      <div id="description" class="hidden">
-        <%= document[:asset_description][0..99] + "..." %>
-      </div>
-    <% end %>
+  <div class="info">
+    <%= document[:title] %>
   </div>
 </a>
