--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,7 +12,7 @@
         <p><%= link_to('About Us', '/about') %></p>
         <p><%= link_to('Blog', 'http://blog.openvault.wgbh.org/') %></p>
         <p><%= link_to('Contact Us', '/contact-us') %></p>
-        <p><%= link_to('Donate', '/donate') %></p>
+        <p><%= link_to('Support Open Vault', '/support-open-vault') %></p>
         <p><%= link_to('Help', '/help') %></p>
         <p><%= link_to('Credits', '/credits') %></p>
         <p><%= link_to('Media Production Organizational Tools', '/media-production-organizational-tools') %></p>
