--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -17,7 +17,7 @@
         <%= link_to(t('series_short'), '/series') %>
         <%= link_to(t('exhibits'), '/exhibits') %>
         <%= link_to(t('collections'), '/collections') %>
-        <%= link_to(t('donate'), '/donate', id: 'donate') %>
+        <%= link_to(t('support'), '/support-open-vault', id: 'support') %>
       </nav>
     </div>
   </div>
