--- a/app/views/catalog/player/_player_right.html.erb
+++ b/app/views/catalog/player/_player_right.html.erb
@@ -13,7 +13,7 @@
 
   <% if @pbcore.this_isnt_all? %>
     <p>
-      More material maybe be available from this program at the WGBH Archive.
+      More material may be available from this program at the WGBH Archive.
       If you are a researcher interested in accessing the collection at WGBH,
       please email <a href="mailto:archive_requests@wgbh.org">archive_requests@wgbh.org</a>.
     </p>
@@ -52,7 +52,7 @@
                   ">Got it</span>
         </small></div>
       <% end %>
-    <% end
+    <% end %>
 
     <button id="btn-hide" class="btn btn-primary btn-sm">Show/Hide Transcript</button>
 
