--- a/app/views/catalog/player/_player_right.html.erb
+++ b/app/views/catalog/player/_player_right.html.erb
@@ -13,7 +13,7 @@
 
   <% if @pbcore.this_isnt_all? %>
     <p>
-      More material is available from this program at the WGBH Archive.
+      More material may be available from this program at the WGBH Archive.
       If you are a researcher interested in accessing the collection at WGBH,
       please email <a href="mailto:archive_requests@wgbh.org">archive_requests@wgbh.org</a>.
     </p>
@@ -21,10 +21,7 @@
 
   <% if !@pbcore.digitized? %>
     <p>
-      Undigitized item:
-      <span class="btn btn-primary btn-sm"
-            onclick="$('#request-modal').modal('show');">
-          Request Digitization</span>
+      This program has not been digitized yet.
     </p>
   <% end %>
 
@@ -63,12 +60,13 @@
             frameBorder="0" height="400"></iframe>
 
   <% elsif !@pbcore.image? %>
-    <p>
+  <p>There is currently no transcript available for this item.</p>
+    <!-- <p>
       Untranscribed item:
       <span class="btn btn-primary btn-sm"
             onclick="$('#request-modal').modal('show');">
           Request Transcription</span>
-    </p>
+    </p> -->
   <% end %>
 </div>
 
