--- a/app/views/catalog/player/_player_right.html.erb
+++ b/app/views/catalog/player/_player_right.html.erb
@@ -13,7 +13,7 @@
 
   <% if @pbcore.this_isnt_all? %>
     <p>
-      More material may be available from this program at the WGBH Archive.
+      More material may be available from this program at the WGBH Archives.
       If you are a researcher interested in accessing the collection at WGBH,
       please email <a href="mailto:archive_requests@wgbh.org">archive_requests@wgbh.org</a>.
     </p>
@@ -21,7 +21,7 @@
 
   <% if !@pbcore.digitized? %>
     <p>
-      This program has not been digitized yet.
+      This program has not been digitized yet or cannot be made available on Open Vault.
     </p>
   <% end %>
 
@@ -60,8 +60,8 @@
             frameBorder="0" height="400"></iframe>
 
   <% elsif !@pbcore.image? %>
-  <p>There is currently no transcript available for this item.</p>
-    <!-- <p>
+    <!-- Removing during NEH Challenge Grant Fundraising, may want to reimplement later
+    <p>
       Untranscribed item:
       <span class="btn btn-primary btn-sm"
             onclick="$('#request-modal').modal('show');">
