Allows new options for annotationType="Digitized"
* Adds method PBCore#playable? that checks the value of pbcoreAnnotation where
  annotationType is "Digitized".
  * 'yes' means playable.
  * 'not available online' means digitized, but not playable.
* Uses PBCore#playable? in views for player.
* Adds full backtrace for PBCore validation errors.
* Fixes some links to LOC pages.
* Adds whitespace between PBCore model methods for better readability.

Closes #731.

--- a/app/views/catalog/player/_player_left.html.erb
+++ b/app/views/catalog/player/_player_left.html.erb
@@ -10,7 +10,7 @@
 
   <% if geoblocked? %>
     <strong>Note:</strong> This content is not available in your region.
-  <% elsif !@pbcore.proxy_srcs.empty? && !@pbcore.image? %>
+  <% elsif @pbcore.playable? && !@pbcore.proxy_srcs.empty? && !@pbcore.image? %>
     <%= content_tag(@pbcore.video? ? 'video' : 'audio', 
                   controls: true, id: 'player-media',
                   controlsList: "nodownload",
@@ -21,6 +21,8 @@
       <% end %>
       <track src="/transcripts/<%= @pbcore.id %>.vtt" default/>
     <% end %>
+  <% else %>
+    <img src="<%= @pbcore.thumbnail_src %>">
   <% end %>
 
   <% if @pbcore.playlist_group %>
