--- a/app/views/shared/_collection_exhibit_show.html.erb
+++ b/app/views/shared/_collection_exhibit_show.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag "locals/collectioncard.css" %>
+
 <% content_for(:page_title) do %>
   <%= item.title + ' - ' + t('blacklight.application_name') %>
 <% end %>
@@ -34,5 +36,36 @@
         </div>
       <% end %>
     <% end %>
-  <% end %>
+  <% end %>  
 </main>
+
+<%= react_component("CollectionCards",
+    cards: [
+      {
+        title: "How Big Do Things Look?",
+        description: "What is psychology? According to Dr. Boring, it is a scientific story of men getting along in the changing world. Dr. Boring talks about 3 departments in the nervous system: information department, behavior, and action.",
+        img: "https://s3.amazonaws.com/openvault.wgbh.org/catalog/asset_thumbnails/V_7D937698FAA1489882C6BFDC8E62849D.jpg",
+        record_link: "https://www.pbs.org/wgbh/masterpiece/"
+      },
+      {
+        title: "Is Man Free To Choose?",
+        description: "This series (of 38 programs) presents Dr. Edwin Boring's famous psychology course which he teaches at Harvard. He gives the basic facts and principles necessary to uncover man's awareness, thought and behavior.",
+        img: "https://s3.amazonaws.com/openvault.wgbh.org/catalog/asset_thumbnails/V_3F5E87799D7D478AA3E022BA245986C1.jpg",
+        record_link: "https://www.britannica.com/biography/Alistair-Cooke"
+      },
+      {
+        title: "Nature Vs. Nurture",
+        description: "Stress will be placed on the biological development of these phenomena and the role of heredity and learning in determining human abilities and human efficiency. Dr. Boring recaps the last episode when he talked about sex, and focuses on the problems of nature and biological differences reflected in psychology.",
+        img: "http://openvault.wgbh.org/catalog/V_87A4D8EB4DF044D48313ED7FA6F0A2A7",
+        record_link: "https://www.bbc.co.uk/programmes/b00f6hbp"
+      },
+      {
+        title: "What The Brain Does",
+        description: "Then he talks about the centers of the brain and their projections: motor, touch, vision, hearing, and frontal. Three more diagrams are shown, including a topological projection of the areas of brain responsible for face, tongue, hand, arm, trunk.",
+        img: "https://s3.amazonaws.com/openvault.wgbh.org/catalog/asset_thumbnails/V_615DF936D24544D8B22261D0C4AD06DD.jpg",
+        record_link: "https://www.wgbh.org/masterpiece/"
+      },
+
+    ]
+) %>  
+
