--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -1,34 +1,58 @@
 .cards-container {
   position: relative;
-  display: inline-block;
+  /*display: inline-block;*/
   max-width: 100%;
   width: 100%;
+
+  display:flex;
+  flex-flow: row wrap;
 }
 
 .card-container {
-  position: relative;
+  order: 2;
+
   display: inline-block;
+  position: relative;
   border-radius: 3px;
   border: 2px solid #eee;
-  height: 10vh;
   background-color: #ddd;
   padding: 0.6vw;
   overflow-y: hidden;
   overflow-x: hidden;
   margin-right: 0px !important;
+
+  width: 25%;
+  height: 10vw;
+  transition: width 0.3s, height 0.3s;
+  -webkit-transition: width 0.3s, height 0.3s;
+  -moz-transition: width 0.3s, height 0.3s;
+  -ms-transition: width 0.3s, height 0.3s;
+  -o-transition: width 0.3s, height 0.3s;
+}
+
+.card-container.expanded {
+  order: 1;
+  transition: width 0.3s, height 0.3s;
+  -webkit-transition: width 0.3s, height 0.3s;
+  -moz-transition: width 0.3s, height 0.3s;
+  -ms-transition: width 0.3s, height 0.3s;
+  -o-transition: width 0.3s, height 0.3s;
+
+  width: 100%;
+  height: 20vh;
 }
 
 .card-container-mask {
   opacity: 0;
   position: absolute;
   width: 100%;
-  height: 10vh;
+  height: 10vw;
   -webkit-mask-image: linear-gradient(to bottom, #ccc 45%, transparent 100%);
   mask-image: linear-gradient(to bottom, #ccc 45%, transparent 100%);
 }
 
 .card-container:hover > .card-container-mask {
-  transition: opacity 2s;
+  transition: opacity 0.3s;
   opacity: 1;
 }
 
@@ -42,14 +66,25 @@
   font-style: italic;
   position: absolute;
   text-align: center;
-  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
   bottom: 0.5em;
   font-size: 16px;
+  background-color: transparent;
+  color: #000;
+}
+
+.card-showfull:hover {
   color: #000;
 }
 
 .card-container:hover > .card-showfull {
-  transition: opacity 2s;
+  transition: opacity 0.3s;
+  transition: background-color 0.3s;
+  background-color: #ddd;
   opacity: 1;
 }
 
@@ -59,19 +94,11 @@
   padding: 0.4vw;
   color: #111;
 }
+/*
+.card-container:not(.expanded) {
 
-.card-closed {
-  min-width: 25%;
-  width: 25%;
-  max-width: 25%;
 }
-
-.card-expanded {
-  transition: width 2s;
-  min-width: 100%;
-  width: 100%;
-  max-width: 100%;
-}
+*/
 
 .card-description {
   font-size: 16px;
@@ -84,3 +111,59 @@
 .card-img {
   color: #ff00ff;
 }
+
+.season {
+  padding: 0.4vw;
+}
+
+.season > div.season-body {
+  display: none;
+}
+
+.h2-season-title {
+  margin-right: 0 !important;
+}
+
+.season > h2.season-title {
+  width: 100%;
+  background-color: transparent;
+  margin-right: 0 !important;
+  padding: 0.4vw;
+  border-radius: 4px;
+}
+
+.season h2.season-title .season-title-text {
+  margin-right: 0 !important;
+  width: 50%;
+}
+
+.season > h2.season-title:hover {
+  background-color: #eee;
+}
+
+.season.season-open > div.season-body {
+  display: block;
+}
+
+.season.season-open > h2.season-title {
+  background-color: #eee;
+}
+/*
+#main-container img.season-image {
+  width: 50%;
+  float: none;
+  display: inline-block;
+}
+
+.season h2.season-title > img.season-image {
+  opacity: 1;
+  height: default;
+  transition: opacity 1s, height 1s;
+}
+
+.season.season-open h2.season-title > img.season-image {
+  opacity: 0;
+  height: 0px;
+  transition: opacity 1s, height 1s;
+}
+*/
