--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -113,14 +113,19 @@
 }
 
 .season {
+  border-radius: 2px;
+  background-color: #eee;
   padding: 0.4vw;
+  padding-top: 0.2vw;
+  padding-bottom: : 0.5vw;
+  margin-bottom: 1.4em;
 }
 
 .season > div.season-body {
   display: none;
 }
 
-.h2-season-title {
+.h2.season-title {
   margin-right: 0 !important;
 }
 
@@ -128,8 +133,7 @@
   width: 100%;
   background-color: transparent;
   margin-right: 0 !important;
-  padding: 0.4vw;
-  border-radius: 4px;
+  border-radius: 2px;
 }
 
 .season h2.season-title .season-title-text {
@@ -137,9 +141,9 @@
   width: 50%;
 }
 
-.season > h2.season-title:hover {
-  background-color: #eee;
-}
+/*.season > h2.season-title:hover {
+  background-color: #fff;
+}*/
 
 .season.season-open > div.season-body {
   display: block;
