--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -23,20 +23,20 @@
 
   width: 25%;
   height: 10vw;
-  transition: width 0.3s, height 0.3s;
-  -webkit-transition: width 0.3s, height 0.3s;
-  -moz-transition: width 0.3s, height 0.3s;
-  -ms-transition: width 0.3s, height 0.3s;
-  -o-transition: width 0.3s, height 0.3s;
+  transition: width 0.6s, height 0.6s;
+  -webkit-transition: width 0.6s, height 0.6s;
+  -moz-transition: width 0.6s, height 0.6s;
+  -ms-transition: width 0.6s, height 0.6s;
+  -o-transition: width 0.6s, height 0.6s;
 }
 
 .card-container.expanded {
   order: 1;
-  transition: width 0.3s, height 0.3s;
-  -webkit-transition: width 0.3s, height 0.3s;
-  -moz-transition: width 0.3s, height 0.3s;
-  -ms-transition: width 0.3s, height 0.3s;
-  -o-transition: width 0.3s, height 0.3s;
+  transition: width 0.6s, height 0.6s;
+  -webkit-transition: width 0.6s, height 0.6s;
+  -moz-transition: width 0.6s, height 0.6s;
+  -ms-transition: width 0.6s, height 0.6s;
+  -o-transition: width 0.6s, height 0.6s;
 
   width: 100%;
   height: 20vh;
@@ -125,15 +125,14 @@
   display: none;
 }
 
-.h2.season-title {
-  margin-right: 0 !important;
-}
-
 .season > h2.season-title {
   width: 100%;
   background-color: transparent;
   margin-right: 0 !important;
   border-radius: 2px;
+  padding: 1.3vw;
+  padding-top: 0.2vw;
+  margin-right: 0 !important;
 }
 
 .season h2.season-title .season-title-text {
