--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -9,12 +9,15 @@
 }
 
 .card-container {
+  z-index: 2;
   order: 2;
+
+  bottom: 0;
 
   display: inline-block;
   position: relative;
   border-radius: 3px;
-  border: 2px solid #eee;
+  border: 1px solid #ddd;
   background-color: #ddd;
   padding: 0.6vw;
   overflow-y: hidden;
@@ -43,12 +46,25 @@
 }
 
 .card-container-mask {
-  opacity: 0;
+/*  opacity: 0;
   position: absolute;
   width: 100%;
   height: 10vw;
   -webkit-mask-image: linear-gradient(to bottom, #ccc 45%, transparent 100%);
-  mask-image: linear-gradient(to bottom, #ccc 45%, transparent 100%);
+  mask-image: linear-gradient(to bottom, #ccc 45%, transparent 100%);*/
+  
+  top: 0;
+  left: 0;
+  position: absolute;
+  opacity: 0.8;
+  transition: opacity 0.8s;
+  background-color: #ddd;
+  min-width: 100%;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+  z-index: 3
 }
 
 .card-container:hover > .card-container-mask {
@@ -57,7 +73,8 @@
 }
 
 .card-container:hover {
-  transition: background-color 0.5s;
+  height: 10.6vw;
+  transition: background-color 0.5s, height: 0.6s;
   background-color: #eee;
 }
 
@@ -65,6 +82,7 @@
   opacity: 0;
   font-style: italic;
   position: absolute;
+  z-index: 16;
   text-align: center;
   padding-left: 0;
   padding-right: 0;
@@ -84,11 +102,13 @@
 .card-container:hover > .card-showfull {
   transition: opacity 0.3s;
   transition: background-color 0.3s;
-  background-color: #ddd;
+  background-color: #eee;
   opacity: 1;
 }
 
 .card-title {
+  position: relative;
+  z-index: 4;
   font-size: 24px;
   margin: 0;
   padding: 0.4vw;
@@ -101,6 +121,8 @@
 */
 
 .card-description {
+  position: relative;
+  z-index: 4;
   font-size: 16px;
   padding: 0.4vw;
   margin: 0;
@@ -115,24 +137,67 @@
 .season {
   border-radius: 2px;
   background-color: #eee;
-  padding: 0.4vw;
+  /*padding: 0.4vw;
   padding-top: 0.2vw;
   padding-bottom: : 0.5vw;
-  margin-bottom: 1.4em;
+  margin-bottom: 1.4em;*/
+
+  min-height: 6vh;
+
+  position: relative;
 }
 
 .season > div.season-body {
   display: none;
 }
 
-.season > h2.season-title {
+.season .season-mask {
+  top: 0;
+  left: 0;
+  position: absolute;
+  opacity: 0.2;
+  transition: opacity 0.8s;
+  background-color: #000;
+  min-width: 100%;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+  z-index: 1
+}
+
+.season.season-open .season-mask {
+  opacity: 0.6;
+  transition: opacity 0.8s;
+}
+
+.season h2.season-title {
+  vertical-align: middle;
+  margin-top: 0.4vh;
+  position: relative;
+  color: #fff;
+  width: 100%;
+  background-color: transparent;
+  border-radius: 2px;
+  padding: 1vw;
+  padding-top: 1vw;
+  padding-bottom: 0.2vw;
+  margin-right: 0 !important;
+  z-index: 2
+
+}
+
+.season div.season-subtitle {
+  font-size: 10px;
+  margin-top: 0.4vh;
+  padding: 1vw;
+  padding-top: 0.2vw;
+  position: relative;
+  color: #fff;
   width: 100%;
   background-color: transparent;
   margin-right: 0 !important;
-  border-radius: 2px;
-  padding: 1.3vw;
-  padding-top: 0.2vw;
-  margin-right: 0 !important;
+  z-index: 2
 }
 
 .season h2.season-title .season-title-text {
@@ -147,10 +212,10 @@
 .season.season-open > div.season-body {
   display: block;
 }
-
+/*
 .season.season-open > h2.season-title {
   background-color: #eee;
-}
+}*/
 /*
 #main-container img.season-image {
   width: 50%;
