--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -67,12 +67,12 @@
   z-index: 3
 }
 
-.card-container:hover > .card-container-mask {
+.card-container:not(.expanded):hover > .card-container-mask {
   transition: opacity 0.3s;
   opacity: 1;
 }
 
-.card-container:hover {
+.card-container:not(.expanded):hover {
   height: 10.6vw;
   transition: background-color 0.5s, height: 0.6s;
   background-color: #eee;
