--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -187,6 +187,12 @@
 
 }
 
+.treasury-title, .treasury-description {
+  padding: 1vw;
+  padding-top: 0.5vw;
+  margin: 0;
+}
+
 .season div.season-subtitle {
   font-size: 10px;
   margin-top: 0.4vh;
