--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -42,7 +42,7 @@
   -o-transition: width 0.6s, height 0.6s;
 
   width: 100%;
-  height: 20vh;
+  height: 30vh;
 }
 
 .card-container-mask {
@@ -120,7 +120,7 @@
 }
 */
 
-.card-description {
+.card-text {
   position: relative;
   z-index: 4;
   font-size: 16px;
@@ -187,10 +187,15 @@
 
 }
 
-.treasury-title, .treasury-description {
+.treasury-title, .treasury-description, .treasury-noresults {
   padding: 1vw;
   padding-top: 0.5vw;
   margin: 0;
+}
+
+.treasury-noresults {
+  margin-top: 2vh;
+  font-size: 28px;
 }
 
 .season div.season-subtitle {
