--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -33,6 +33,10 @@
   -o-transition: width 0.6s, height 0.6s;
 }
 
+.card-container-video {
+  padding: 0;
+}
+
 .card-container.expanded {
   order: 1;
   transition: width 0.6s, height 0.6s;
@@ -114,11 +118,21 @@
   padding: 0.4vw;
   color: #111;
 }
-/*
-.card-container:not(.expanded) {
 
+.card-video {
+  width: 100%;
 }
-*/
+
+.card-iframe {
+  border: 0;
+  width: 100%;
+  height: 30vh;
+}
+
+.card-iframe-player {
+  width: 100%;
+  height: 30vh; 
+}
 
 .card-text {
   position: relative;
