--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -86,7 +86,7 @@
 
 .card-container:not(.expanded):hover {
   height: 10.6vw;
-  transition: background-color 0.5s, height: 0.6s;
+  transition: background-color 0.5s, height 0.6s;
   background-color: #eee;
 }
 
