'default input color'

--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -241,7 +241,7 @@
   height: 32px;
   max-height: 32px;
   margin-right: 0.2em;
-  color:#ccc;
+  /*color:#ccc;*/
   /*background-color: #F1F1F1;*/
 }
 
