'the incredible flavor, of list'

--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -29,5 +29,5 @@
     </div>
   <% end %>
 
-  <%= react_component("CollectionSeasons", { seasons: @item.seasons }) %>
+  <%= react_component("CollectionSeasons", { seasons: @item.seasons, altLink: @item.alt_link }) %>
 </main>
