--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -1,3 +1,13 @@
+.treasury-alt-link {
+  /*float: right;*/
+  padding: 0.58em;
+  display: inline-block;
+  text-align: right;
+  width: 50%;
+  font-size: 16px;
+  text-decoration: none;
+}
+
 .cards-container {
   position: relative;
   /*display: inline-block;*/
@@ -18,16 +28,18 @@
   background-size: 20000px;
 
 
+
+
   display: inline-block;
   position: relative;
   /*border-radius: 3px;*/
   border: 1px solid #ccc;
-  background-color: #ddd;
+  background-color: transparent;
   padding: 0.6vw;
   overflow-y: hidden;
   overflow-x: hidden;
   margin-right: 0px !important;
-
+/*
   width: 25%;
   height: 10vw;
   transition: width 0.6s, height 0.6s;
@@ -35,6 +47,15 @@
   -moz-transition: width 0.6s, height 0.6s;
   -ms-transition: width 0.6s, height 0.6s;
   -o-transition: width 0.6s, height 0.6s;
+*/
+
+  width: 25%;
+  height: 10vw;
+  transition: width 0.6s;
+  -webkit-transition: width 0.6s;
+  -moz-transition: width 0.6s;
+  -ms-transition: width 0.6s;
+  -o-transition: width 0.6s;
 }
 
 .card-container-video {
@@ -89,8 +110,12 @@
 }*/
 
 .card-container:not(.expanded):hover {
-  height: 10.6vw;
+/*  height: 10.6vw;
   transition: background-color 0.5s, height 0.6s;
+  */
+  /*height: 10.6vw;*/
+  transition: background-color 0.5s;
+
   background-color: #eee;
 }
 
@@ -214,7 +239,6 @@
 }
 
 .treasury-title, .treasury-description, .treasury-noresults {
-  padding: 1vw;
   padding-top: 0.5vw;
   margin: 0;
 }
@@ -223,6 +247,10 @@
   display: inline;
   width: 100%;
   font-size: 12px;
+}
+
+.treasury-title, .treasury-noresults {
+  padding: 1vw;
 }
 
 .treasury-description {
@@ -235,6 +263,7 @@
 }
 
 #treasury-search {
+  width: 50%;
   height: 32px;
   display: inline-block;
   margin-bottom: 0.5vw;
