--- a/app/views/treasuries/list.html.erb
+++ b/app/views/treasuries/list.html.erb
@@ -4,8 +4,9 @@
   <div class="row treasury-title">
     <h1>
       The Linda and Andrew Egendorf Masterpiece Theatre Alistair Cooke Collection
-      <a class="treasury-back-link" href="/collections/alistair-cooke">Return to Collection View</a>
     </h1>
+    <a class="treasury-back-link" href="/collections/alistair-cooke">Return to Alistair Cooke Masterpiece Collection</a>
+
   </div>
 
   <div class="row treasury-description">
