--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -18,7 +18,7 @@
       </div>
 
       <div class="col-md-6">
-        <img src="<%= @item.poster_image %>">
+        <img class="treasury-header-image" src="<%= @item.poster_image %>">
       </div>
     </div>
   <% else %>
