--- a/app/views/treasuries/list.html.erb
+++ b/app/views/treasuries/list.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="col-md-6">
-      <img src="https://s3.amazonaws.com/openvault.wgbh.org/special_collections/alistair-cooke/alistair_cooke_collection.jpg">
+      <img class="treasury-header-image" src="https://s3.amazonaws.com/openvault.wgbh.org/special_collections/alistair-cooke/alistair_cooke_collection.jpg">
     </div>
   </div>
 
