--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -14,7 +14,7 @@
     <div class="row treasury-description">
       <div class="col-md-6">
         <%= @item.description.html_safe %>
-
+        <%= @item.treasury_url %>
       </div>
 
       <div class="col-md-6">
