--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -27,9 +27,6 @@
   background-position: center center;
   background-size: 20000px;
 
-
-
-
   display: inline-block;
   position: relative;
   /*border-radius: 3px;*/
@@ -253,6 +250,13 @@
   width: 100%;
 }
 
+.treasury-neh-image {
+  width: 50%;
+  position: relative;
+  object-fit: cover;
+  display: inline;
+}
+
 .treasury-bio-image {
   width: 100%;
   position: relative;
@@ -267,6 +271,7 @@ a.treasury-bio-image-container{
   width: 50%;
   position: relative;
   display: inline-block;
+  margin-bottom: 1.8em;
 }
 a.treasury-bio-image-container::after {
   color: #000;
@@ -276,7 +281,6 @@ a.treasury-bio-image-container::after {
   font-size: 10px;
   position: absolute;
   bottom: -1em;
-  bottom: -10px;
   right: 0;
   text-align: center;
   width: 100%;
