--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -29,5 +29,5 @@
     </div>
   <% end %>
 
-  <%= react_component("CollectionSeasons", { seasons: @item.seasons, altLink: @item.alt_link }) %>
+  <%= react_component("CollectionSeasons", { seasons: @item.seasons, listLink: @item.list_link, clipLink: @item.clip_link }) %>
 </main>
