--- a/app/assets/stylesheets/locals/collectioncard.css
+++ b/app/assets/stylesheets/locals/collectioncard.css
@@ -10,6 +10,14 @@
 
 .treasury-link {
   width: 50%;
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+.treasury-list-link {
+  font-size: 16px;
+  float: right;
+  margin-right: 1em;
 }
 
 .cards-container {
