'more layout tweaks'

--- a/app/views/treasuries/list.html.erb
+++ b/app/views/treasuries/list.html.erb
@@ -10,17 +10,14 @@
   </div>
 
   <div class="row treasury-description">
-    <div class="col-md-6">
+    <div class="col-md-12">
       The Linda and Andrew Egendorf Masterpiece Theatre Alistair Cooke Collection features programs from the anthology series Masterpiece Theatre presented during Alistair Cooke’s tenure as host (1971-1992). Along with a complete list of those programs with descriptions, the collection will also include Alistair Cooke’s introductions and conclusions for each episode. Additional materials in the collection will be made available online or on-site at WGBH as they are digitized.
-    </div>
-
-    <div class="col-md-6">
-      <img class="treasury-header-image" src="https://s3.amazonaws.com/openvault.wgbh.org/special_collections/alistair-cooke/alistair_cooke_collection.jpg">
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-12">
+      <a class="treasury-list-link" href="/collections/alistair-cooke-clips">Alistair Cooke Clips</a>
       <a class="treasury-list-link" href="/collections/alistair-cooke">Miniseries View</a>
     </div>
 
@@ -59,7 +56,7 @@
 
                               <li>
                                 <a href="<%= clip["recordLink"] %>">
-                                  <h5><%= clip["title"] %> (Clip)</h5>
+                                  <h5 style="display: inline;"><%= clip["title"] %> (Clip)</h5>
                                 </a>
                               </li>
 
