--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -24,5 +24,5 @@
     </div>
   <% end %>
 
-  <%= react_component("CollectionSeasons", { seasons: @item.seasons, listLink: @item.list_link, clipLink: @item.clip_link }) %>
+  <%= react_component("CollectionSeasons", { seasons: @item.seasons, listLink: @item.list_link, clipLink: @item.clip_link, seasonsLink: @item.seasons_link, type: @item.type }) %>
 </main>
