--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -51,7 +51,7 @@
 
         <% url = "<span class='long-url'>http://openvault.wgbh.org/catalog/#{@pbcore.id}</span>".html_safe %>
         <% today = Date.today.to_formatted_s(:long) %>
-        <% org = 'WGBH Media Library & Archives' %>
+        <% org = 'GBH Archives' %>
 
         <dd><em>Chicago</em>:
             &ldquo;<%= @pbcore.title %>,&rdquo;
