--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,9 +9,9 @@
 
   <div class="row" id="nav-button-container">
     <% {
-        series: 'Browse titles in the WGBH Media Library and Archives collection.',
-        exhibits: 'Explore selected topics and digitized programs of historical significance curated by WGBH Mellon Scholars.',
-        collections: 'Check out collections of significant WGBH productions, including unique full-length interviews.'
+        series: 'Browse titles in the GBH Media Library and Archives collection.',
+        exhibits: 'Explore selected topics and digitized programs of historical significance curated by GBH Mellon Scholars.',
+        collections: 'Check out collections of significant GBH productions, including unique full-length interviews.'
       }.each do |key,description| %>
       <div class="col-md-4">
         <a href="/<%= key %>"><h2 class="text-center"><%= t(key) %></h2></a>
@@ -25,7 +25,7 @@
       <h3>What is Open Vault?</h3>
       <p>
         We provide online access to unique and historically important content
-        produced by the public television and radio station WGBH.
+        produced by the public television and radio station GBH.
         <a href="/about">Learn more.</a>
       </p>
     </div>
