--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -21,9 +21,9 @@
         <p><%= link_to('Visiting the Archives', '/visiting-the-archives') %></p>
       </nav>
       <footer class="col-md-4 col-xs-12" role="contentinfo">
-        <%= render partial: 'shared/wgbh_logo.svg' %>
+        <div class="archive-logo"></div>
         <div class="copyright">
-          Copyright &copy; 2015 WGBH <br/>
+          Copyright &copy; 2020 WGBH <br/>
           Educational Foundation<br/>
           All rights reserved
         </div>
