--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <header class="col-md-3" role="banner">
-          <a href="/"><%= render partial: 'shared/ov_logo.svg' %></a>
+          <a href="/"><div class="openvault-logo"></div></a>
       </header>
     </div>
     <div class="row">
