--- a/app/views/catalog/player/_player_modal.html.erb
+++ b/app/views/catalog/player/_player_modal.html.erb
@@ -15,15 +15,15 @@
               body: 'I am interested in http://openvault.wgbh.org/catalog/' + @pbcore.id
             }.to_query
           %>">email</a>, 
-          and we will work with you to make more historic WGBH content available to the world.
+          and we will work with you to make more historic GBH content available to the world.
         </p>
         <p>
           If you are interested in licensing stock footage please visit
-          <a href="http://wgbhstocksales.org">WGBH Stock Sales</a>.
+          <a href="http://wgbhstocksales.org">GBH Stock Sales</a>.
         </p>
         <p>
           If you are a researcher you may schedule an appointment to visit 
-          the WGBH Media Library and Archives in Boston, Massachusetts by emailing
+          the GBH Media Library and Archives in Boston, Massachusetts by emailing
           <a href="mailto:archive_requests@wgbh.org">archive_requests@wgbh.org</a>.
         </p>
       </div>
@@ -40,12 +40,12 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="request-modal-title">License WGBH Content</h4>
+        <h4 class="modal-title" id="request-modal-title">License GBH Content</h4>
       </div>
       <div class="modal-body">
         <p>
           If you are interested in licensing stock footage please visit
-          <a href="http://wgbhstocksales.org">WGBH Stock Sales</a>, or contact us directly at 
+          <a href="http://wgbhstocksales.org">GBH Stock Sales</a>, or contact us directly at 
           <a href="mailto:stock_sales@wgbh.org">stock_sales@wgbh.org</a> or 617-300-3939.
         </p>
       </div>
