--- a/app/views/catalog/player/_player_right.html.erb
+++ b/app/views/catalog/player/_player_right.html.erb
@@ -13,8 +13,8 @@
 
   <% if @pbcore.this_isnt_all? %>
     <p>
-      More material may be available from this program at the WGBH Archives.
-      If you are a researcher interested in accessing the collection at WGBH,
+      More material may be available from this program at the GBH Archives.
+      If you are a researcher interested in accessing the collection at GBH,
       please email <a href="mailto:archive_requests@wgbh.org">archive_requests@wgbh.org</a>.
     </p>
   <% end %>
