--- a/app/assets/stylesheets/globals/colors.css.scss
+++ b/app/assets/stylesheets/globals/colors.css.scss
@@ -1,6 +1,6 @@
 $dark-blue: #732487;
-$medium-blue: #5D73B1;
-$light-blue: #93A3CA;
+$medium-blue: #CAB8E0;
+$light-blue: #ff0;
 $pale-blue: #DEE5EF;
 
 $yellow: #EFBC45;
