Adds new collection-esque model Treasury   Loads treasury data from yml file   Formats data into react props hash for 'Seasons'-style Treasury   Formats data into react props hash for 'Episodes'-style Treasury   Pipes treasury data into react components (TreasurySeasons, etc.) for frontend   Adds several fields to PBCore model for Cooke collection data   Adds 'card/embed' partial to accommodate viewing video clips in Treasury view
  Treasury is currently highly customized for the Alistair Cooke Masterpiece Collection, so, we will want to figure out what a more general version of Treasury looks like in the future

Adds alistair-cooke.yml data file for Cooke collection

GBH Rebrand
  Changes WGBH to GBH about 1000 times throughout site
  Changes WGBH-MLA to GBH Archives many times
  Changes site main and accent colors
  Changes SCSS variable names to reflect new colors
  Swaps WGBH logos for GBH
  Replaces SVG logos with PNG versions

Temporarily disables 'no empty elements' check in xml_backed.rb
  There are still records in the Masterpiece collection's XML that don't have a Season Number, resulting in an empty element failure. Until this data gets updated, this breaks the entire website.

Temporarily disables url_method validation

Edits assertions in pb_core_spec to support new fields

--- a/app/assets/stylesheets/globals/colors.css.scss
+++ b/app/assets/stylesheets/globals/colors.css.scss
@@ -1,10 +1,10 @@
-$dark-blue: #732487;
-$medium-blue: #CAB8E0;
+$dark-purple: #732487;
+$medium-purple: #CAB8E0;
 $light-blue: #ff0;
 $pale-blue: #DEE5EF;
 
-$yellow: #EFBC45;
-$pale-yellow: #FDD88B;
+$skyblue: #8dbaff;
+$pale-skyblue: #d6e6fc;
 $red: #8F152C;
 
 $dark-grey: #414141; // TODO: unused?
