--- a/app/assets/stylesheets/globals/defaults.css.scss
+++ b/app/assets/stylesheets/globals/defaults.css.scss
@@ -14,7 +14,7 @@ html > body {
         font-weight: $semibold;
     }
     .btn-primary {
-        background: $medium-blue;
+        background: $medium-purple;
         border: none;
     }
     .container-fluid {
