--- a/app/assets/stylesheets/locals/plain.css.scss
+++ b/app/assets/stylesheets/locals/plain.css.scss
@@ -20,7 +20,7 @@
         .play-from-here::before {
             content: '\25B6'; // right-pointing triangle
             cursor: pointer;
-            background: $medium-blue;
+            background: $medium-purple;
             color: #FFF;
             padding: 0 4px;
             border-radius: 3px;
