--- a/app/assets/stylesheets/locals/series-index.css.scss
+++ b/app/assets/stylesheets/locals/series-index.css.scss
@@ -1,10 +1,10 @@
 .blacklight-series-index {
     .letters {
         padding: 0.75 * $grid-gutter-width 1.5 * $grid-gutter-width;
-        background: $medium-blue;
+        background: $medium-purple;
         font-size: 24px;
         font-weight: $bold;
-        color: $yellow;
+        color: $skyblue;
         a { 
             font-weight: $medium;
             color: #FFF;
