--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -16,7 +16,7 @@
     }
     @media (min-width: $screen-md-min) {
         #sidebar {
-            background: $medium-blue;
+            background: $medium-purple;
             .facet-content .panel-body {
                 position: absolute; // So the div doesn't expand when the menu drops.
             }
@@ -105,7 +105,7 @@
             background: $pale-grey;
             padding: $grid-gutter-width/2;
             .slider-handle {
-                background: $dark-blue;
+                background: $dark-purple;
                 opacity: 1;
             }
             .slider-selection {
@@ -144,7 +144,7 @@
                 margin-bottom: 0;
             }
             .info {
-               color: $dark-blue;
+               color: $dark-purple;
                padding: 15px 0 50px;
             }
             &:hover .highlight {
